overflow on modem issue

--- a/css-folder/style.css
+++ b/css-folder/style.css
@@ -5,6 +5,11 @@
   font-size: 1rem;
 }
 
+
+html, body {
+    overflow-x: hidden;
+}
+
 body {
   background-color: #0a192f;
   color: #8892b0;
